2024-02-17T16:17:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7942864424 # 125
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-17
* notice: last 14d: unq all: 1 12
* notice: prev accum: outdated-unq outdated-all / unq all: 755 1196 / 762 1210
* notice: next accum: outdated-unq outdated-all / unq all: 756 1198 / 762 1210
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-03] / []

2024-02-16T16:17:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7933293913 # 122
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-16
* notice: last 14d: unq all: 1 14
* notice: prev accum: outdated-unq outdated-all / unq all: 754 1194 / 762 1210
* notice: next accum: outdated-unq outdated-all / unq all: 755 1196 / 762 1210
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-02] / []

2024-02-15T16:18:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7918982132 # 119
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-15
* notice: last 14d: unq all: 1 16
* notice: prev accum: outdated-unq outdated-all / unq all: 753 1192 / 762 1210
* notice: next accum: outdated-unq outdated-all / unq all: 754 1194 / 762 1210
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-01] / []

2024-02-14T16:18:10Z: