@@ -1,3 +1,12 @@
+2024-02-18T16:17:29Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7950229872 # 128
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-18
+* notice: last 14d: unq all: 1 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 756 1198 / 762 1210
+* notice: next accum: outdated-unq outdated-all / unq all: 757 1200 / 762 1210
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-02-04] / []
+
 2024-02-17T16:17:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7942864424 # 125
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-17
